# demo-genai-training

./: config.py  main.py  pyproject.toml
data/: url_list.txt
lib/: chain.py
scripts/: get_blog_url.py
